--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   font-family: "Mont", sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 h2 {
   font-size: 37px;
 }
@@ -28,7 +32,8 @@ button {
   width: max-content;
   padding: 20px 30px;
   font-weight: 800;
-  font-size: 14px;
+  font-size: 70%;
+
 }
 
 button:hover {
@@ -46,7 +51,8 @@ body {
   padding: 3% 7% 0 7%;
   justify-content: space-between;
   align-items: flex-start;
-  height: 85vh;
+  width:100%;
+  height: 83vh;
 }
 
 #sale {
@@ -55,6 +61,7 @@ body {
   justify-content: center;
   background: #11346f;
   color: white;
+  width: 100%;
 }
 #sale p {
   font-size: 14px;
@@ -185,6 +192,7 @@ body {
   display: flex;
   width: fit-content;
   align-self: center;
+  justify-content: center;
   background: rgba(77, 145, 207, 0.15);
   box-shadow: 0px 0px 14px #ffffff;
   border-radius: 30px;
@@ -222,7 +230,8 @@ body {
   justify-content: space-evenly;
   background: #11346f;
   color: white;
-  padding: 20px 60px;
+  padding: 10px 5px;
+  height: 8.5vh;
 }
 
 #logo {
@@ -237,43 +246,44 @@ body {
 }
 
 #conditions p {
-  font-size: 16px;
+  font-size: 1.5vh;
   font-weight: 800;
 }
 
 #features {
   width: 100%;
-  height: 92vh;
+  height: 87vh;
   background: linear-gradient(118.72deg, #aeccff -18.14%, #197aff 165.34%);
   display: flex;
-
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 #titleOffer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4% 0;
+  padding: 2% 0;
 }
 
 #features h1 {
   font-weight: 700;
-  font-size: 37px;
+  font-size: 4vh;
   color: #11346f;
 }
 
 #features h2 {
   font-weight: 900;
-  font-size: 37px;
+  font-size: 5vh;
   color: #ffffff;
 }
 
 #offerContainer {
   display: flex;
   justify-content: space-around;
-  width: 80%;
+  width: 70%;
+  position: relative;
 }
 
 #offerItem {
@@ -285,7 +295,8 @@ body {
   align-items: center;
   flex-direction: column;
   height: fit-content;
-  padding: 30px 20px;
+  padding: 30px 10px;
+  height: 100%;
 }
 .first {
   background: #f6f8fc;
@@ -300,31 +311,31 @@ body {
 }
 
 .item {
-  width: 50%;
+  width: 40%;
   margin-bottom: 20%;
   margin-top: -20%;
 }
 
 .threeItems {
-  width: 70%;
+  width: 60%;
   margin-bottom: 10%;
   margin-top: -20%;
 }
 
 .fiveItems {
-  width: 90%;
-  margin-bottom: 5%;
+  width: 70%;
+  margin-bottom: 10%;
   margin-top: -20%;
 }
 
 #offerItem h3 {
   font-weight: 700;
-  font-size: 28px;
+  font-size: 100%;
 }
 #offerItem h3 span{
    color: #197AFF;
    font-weight: 900;
-   font-size: 30px;
+   font-size: 100%;
 }
 
 #fullPrice {
@@ -336,7 +347,7 @@ body {
 
 #fullPrice h4 {
   font-weight: 800;
-  font-size: 32px;
+  font-size: 100%;
   text-decoration: line-through;
   color: #93a2bb;
 }
@@ -351,17 +362,17 @@ body {
 #offerPrice h2 {
   color: #11346f;
   font-weight: 900;
-  font-size: 32px;
+  font-size: 150%;
 }
 
 #offerPrice i {
-  font-size: 13px;
+  font-size: 50%;
   font-style: normal;
 }
 
 #offerItem p {
   font-weight: 700;
-  font-size: 13px;
+  font-size: 50%;
   display: flex;
   align-items: center;
 }
@@ -371,7 +382,7 @@ body {
   border-radius: 50px;
   border: 0;
   width: max-content;
-  padding: 10px;
+  padding: 5px;
   font-weight: 700;
   font-size: 12px;
   text-transform: uppercase;
@@ -390,7 +401,7 @@ body {
   border-radius: 50px;
   border: 0;
   width: max-content;
-  padding: 10px 20px;
+  padding: 5px;
   font-weight: 700;
   font-size: 12px;
   text-transform: uppercase;
@@ -398,5 +409,80 @@ body {
 }
 
 #offerItem img {
-  padding: 20px 0;
+  padding: 10px 0;
+}
+
+
+/*page 3*/
+
+#reviewPage{
+    width: 100%;
+    height: 100hv;
+display: flax;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+padding: 5%;
+}
+
+.title{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        
+      }
+      
+      .title h1 {
+        font-size: 5vh;
+        font-weight: 600;
+        color: #11346f;
+}
+
+
+
+#readWrite{
+display: flex;
+justify-content: space-between;
+padding-top: 3%;
+width: 98%;
+}
+
+#readWrite p{
+    color:#11346f;
+    font-weight: 600;
+}
+#read{
+    display: flex;
+}
+#readWrite button{
+    background: transparent;
+    color: #3A3075;
+    border: 1px solid #3A3075 ;
+    border-radius: 10%;
+    padding: 2px 10px;
+}
+
+#reviews{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin: 20px 10px;
+}
+#reviews div{
+    width: 20%;
+}
+
+#reviews img{
+    width: 100%;
+}
+
+#reviews h3{
+    color: #11346f;
+}
+
+#reviews p{
+    font-size: 100%;
+    width: 80%;
 }
