--- a/style.css
+++ b/style.css
@@ -46,14 +46,26 @@ body {
 
 #frontPage {
   display: flex;
-  flex-direction: row;
+  
   flex-wrap: wrap;
   padding: 3% 7% 0 7%;
   justify-content: space-between;
   align-items: flex-start;
   width:100%;
-  height: 83vh;
 }
+
+.massager {
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .wordArrow{
+    display: flex;
+    
+  }
+  
 
 #sale {
   display: flex;
@@ -117,6 +129,7 @@ body {
 }
 
 #design {
+    align-items: center;
   display: flex;
   flex-direction: column;
   color: #197aff;
@@ -130,13 +143,10 @@ body {
   font-weight: 800;
 }
 
-#design img {
-  width: 100%;
-}
-
 #ads {
   width: 50%;
   margin: 1%;
+  
 }
 
 #useBox {
@@ -155,11 +165,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 10px 10px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 #useBox h6 {
+    display: flex;
   font-size: 14px;
   font-weight: 800;
   color: #11346f;
@@ -182,22 +193,23 @@ body {
 #order {
   display: flex;
   flex-direction: column;
-  margin: 1%;
+  margin-left: 1%;
   justify-content: center;
   align-items: flex-start;
-  width: 35vh;
+  width: fit-content;
+  padding-bottom: 3%;
 }
 
 #get {
   display: flex;
   width: fit-content;
-  align-self: center;
-  justify-content: center;
+  justify-content: flex-end;
   background: rgba(77, 145, 207, 0.15);
   box-shadow: 0px 0px 14px #ffffff;
   border-radius: 30px;
   margin: 3%;
-  padding: 10px 20px;
+  align-self: center;
+  padding: 20px 20px;
 }
 
 #get p {
@@ -212,10 +224,6 @@ body {
   padding: 0 3px 0 3px;
 }
 
-#visual {
-  display: flex;
-  width: 40%;
-}
 
 /*second page*/
 
@@ -234,6 +242,8 @@ body {
   height: 8.5vh;
 }
 
+
+
 #logo {
   width: 50px;
   height: 50px;
@@ -249,10 +259,12 @@ body {
   font-size: 1.5vh;
   font-weight: 800;
 }
+.shortText{
+    display: none;
+}
 
 #features {
   width: 100%;
-  height: 87vh;
   background: linear-gradient(118.72deg, #aeccff -18.14%, #197aff 165.34%);
   display: flex;
   align-items: center;
@@ -284,6 +296,8 @@ body {
   justify-content: space-around;
   width: 70%;
   position: relative;
+  padding-bottom: 5%;
+  flex-wrap: wrap;
 }
 
 #offerItem {
@@ -294,9 +308,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: fit-content;
   padding: 30px 10px;
-  height: 100%;
+  margin-top: 10%;
 }
 .first {
   background: #f6f8fc;
@@ -312,7 +325,7 @@ body {
 
 .item {
   width: 40%;
-  margin-bottom: 20%;
+  margin-bottom: 15%;
   margin-top: -20%;
 }
 
@@ -324,7 +337,7 @@ body {
 
 .fiveItems {
   width: 70%;
-  margin-bottom: 10%;
+  margin-bottom: 9%;
   margin-top: -20%;
 }
 
@@ -423,6 +436,8 @@ justify-content: center;
 align-items: center;
 flex-direction: column;
 padding: 5%;
+background-color: #F6F8FC;
+position: relative;
 }
 
 .title{
@@ -445,7 +460,7 @@ padding: 5%;
 display: flex;
 justify-content: space-between;
 padding-top: 3%;
-width: 98%;
+width: 92%;
 }
 
 #readWrite p{
@@ -465,13 +480,21 @@ width: 98%;
 
 #reviews{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    margin: 20px 10px;
+    justify-content: space-around;
+    width:95%;
+    position: relative;
+    padding: 5% 0;
+    
 }
 #reviews div{
-    width: 20%;
+    width: 300px;
+    background: #FFFFFF;
+border: 1px solid #E9E9E9;
+border-radius: 10px;
+display: flex;
+justify-content: flex-start;
+  flex-direction: column;
+
 }
 
 #reviews img{
@@ -480,9 +503,189 @@ width: 98%;
 
 #reviews h3{
     color: #11346f;
+    padding:0 6px;
+}
+.material-icons{
+    color: rgb(220, 220, 5);
 }
 
 #reviews p{
     font-size: 100%;
     width: 80%;
+    padding:0 6px;
+}
+
+#stars{
+    display: flex;
+    flex-direction: row;
+}
+
+/*fourth page*/
+
+#faqPage{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 3%;
+    background: #11346F;
+}
+
+#faqPage .title{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#faqPage .title h1{
+        font-size: 4vh;
+        font-weight: 500;
+        color: #FFFFFF;
+        font-size: 7vh;
+        
+}
+
+#faqDesign {
+    display: flex;
+    flex-direction: column;
+    color: #FFFFFF;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 1%;
+    font-weight: 900;
+}
+
+#faqContent{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5% 0;
+}
+
+#select{
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    align-items: stretch;
+}
+
+#select select{
+    background:#31548E;
+    border: 1px solid #31548E;
+    color: #FFFFFF;
+border-radius: 9px;
+font-size: 2.2vh;
+margin: 3px 0;
+padding: 15px;
+}
+
+option{
+    color: #AECCFF;
+}
+
+#seeAll select{
+    background: transparent;
+    border: 0;
+}
+
+
+/*smaller screens*/
+
+@media (max-width: 800px){
+
+    #frontPage{
+        background:rgba(174, 204, 255, 0.5) ;
+    }
+    #header{
+     justify-content: center;
+    }
+    #navbar{
+        display: none;
+    }
+    #title{
+        flex-direction: column;
+        width:60%;
+        
+    }
+
+    #design{
+        align-items: flex-start;
+    }
+    
+    .massager{
+        width: 40%;
+        position: absolute;
+        right: 5%;
+        top: 20%;
+    }
+.wordArrow{
+    display: flex;
+}
+    .frontArrow{
+        transform: scaleX(-1) rotate(180deg);
+    }
+    
+
+    #ads{
+        width:100%;
+    }
+
+
+    
+    #container .shortText{
+        display: inline-block;
+    }
+    #container p{
+        display: none;
+    }
+
+   #container .star {
+        display: none;
+    }
+
+    #useBox h6{
+        align-items: center;
+    }
+
+    #useBox li{
+        display: none;
+    }
+
+    #reviewPage{
+        overflow-x: scroll;
+    }
+    #reviews{
+        justify-content: flex-start;
+    }
+
+    #reviews div{
+        min-width: 60%;
+        margin: 3px;
+    }
+
+   .title{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   }
+
+    #faqPage{
+        align-items: center;
+    }
+
+    #faqPage .title{
+        flex-direction: column;
+    }
+
+    #faqPage img{
+        width:100%;
+    }
+    #faqPage select{
+        width:100%;
+    }
 }
